Fix broken CSS imports

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -243,6 +243,7 @@ a, a:active {
     }
     div.news-card-grid {
         grid-template-columns: 1fr;
+        row-gap: 0.5em;
     }
     /* Buttons */
     div.platform-selector {
